--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
   "name": "gh-social-previews",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "author": {
+    "name": "Braydon Rainnny",
+    "email": "braydonrainnny@gmail.com",
+    "url": "https://rainnny.club"
+  },
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.9"
+    "@vercel/og": "^0.6.4",
+    "clsx": "^2.1.1",
+    "next": "^15.0.3",
+    "octokit": "^4.0.2",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "typescript": "^5",
