--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/og": "^0.6.4",
+    "@vercel/og": "^0.6.8",
     "clsx": "^2.1.1",
-    "next": "^15.0.3",
-    "octokit": "^4.0.2",
-    "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1",
-    "react-icons": "^5.3.0",
-    "tailwind-merge": "^2.5.5"
+    "next": "^15.3.1",
+    "octokit": "^4.1.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0-beta.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.9",
-    "postcss": "^8",
-    "tailwindcss": "^4.0.0-beta.2",
-    "typescript": "^5"
+    "@tailwindcss/postcss": "^4.1.4",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "eslint": "^9.25.1",
+    "eslint-config-next": "15.3.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3"
   }
 }
